# qstardict

./: AUTHORS  ChangeLog  Doxyfile  INSTALL  README  README.MACOSX  README.WINDOWS  THANKS  qstardict.pri  qstardict.pro
debian/: changelog  control  copyright  docs  files  menu  qstardict.1  qstardict.postinst  qstardict.substvars  qstardict.xpm  rules  watch
kdeplasma/: CMakeLists.txt  COMPILING
kdeplasma/applet/: CMakeLists.txt  dict.cpp  dict.h  plasma-qstardict-default.desktop
kdeplasma/dataengine/: CMakeLists.txt  config.h.cmake  dictengine.cpp  dictengine.h  plasma-dataengine-qstardict.desktop
plugins/: dictplugin.h  plugin.pri  plugins.pri  plugins.pro
plugins/multitran/: README  multitran.cpp  multitran.h  multitran.pro
plugins/stardict/: dictziplib.cpp  dictziplib.hpp  distance.h  file.hpp  lib.cpp  lib.h  mapfile.hpp  moc_settingsdialog.cpp  moc_stardict.cpp  qrc_pixmaps.cpp  settingsdialog.h  (+6 more)
qstardict/: application.cpp  application.h  cssedit.cpp  cssedit.h  cssedit.ui  dbusadaptor.cpp  dbusadaptor.h  dictbrowser.cpp  dictbrowser.h  dictcore.cpp  dictcore.h  dictwidget.cpp  dictwidget.h  keyboard.cpp  keyboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_application.cpp  moc_cssedit.cpp  moc_dbusadaptor.cpp  moc_dictbrowser.cpp  moc_dictcore.cpp  moc_dictwidget.cpp  moc_mainwindow.cpp  moc_popupwindow.cpp  moc_resizablepopup.cpp  moc_selection.cpp  moc_settingsdialog.cpp  popupwindow.cpp  popupwindow.h  qrc_pixmaps.cpp  qstardict.desktop  qstardict.pro  qstardict.rc  resizablepopup.cpp  resizablepopup.h  selection.cpp  selection.h  (+10 more)
(+45 files in other folders)
